# serializer version: 1
# name: test_sensor_time_transitions[test_time0-new_moon][moon_main_state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <PlanetStateKey.ALTITUDE: 'altitude'>: 17.874541878673547,
      'attribution': 'planet_phase',
      <PlanetStateKey.AZIMUTH: 'azimuth'>: 193.5460733030325,
      <PlanetStateKey.DISTANCE: 'distance'>: 372248207.05596125,
      'elevation': 295,
      'friendly_name': 'planet_phase_moon main_state',
      <PlanetStateKey.HOUR_ANGLE: 'hour_angle'>: 13.955528552107625,
      'icon': 'mdi:weather-sunset-down',
      <PlanetStateKey.Iillumination: 'illumination'>: 0.1129370927810669,
      'latitude': 48.69413582658938,
      'longitude': 9.418473690748216,
      <PlanetStateKey.MAIN_MOVE: 'main_move'>: 'descending',
      <PlanetStateKey.MAIN_STATE: 'main_state'>: 'above_horizon',
      <PlanetStateKey.MEASUREMENT_LOCAL_TIME: 'measurement_local_time'>: HAFakeDatetime(2025, 1, 29, 13, 35, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.MEASUREMENT_UTC_TIME: 'measurement_utc_time'>: HAFakeDatetime(2025, 1, 29, 12, 35, tzinfo=zoneinfo.ZoneInfo(key='UTC')),
      <PlanetStateKey.NEXT_ANTITRANSIT: 'next_antitransit'>: HAFakeDatetime(2025, 1, 30, 1, 4, 46, 343376, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.MOON_NEXT_FULLMOON: 'next_full_moon'>: HAFakeDatetime(2025, 2, 12, 14, 53, 19, 940038, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.MOON_NEXT_NEWMOON: 'next_new_moon'>: HAFakeDatetime(2025, 1, 29, 13, 35, 54, 996513, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_RISING: 'next_rising'>: HAFakeDatetime(2025, 1, 30, 8, 45, 23, 596232, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_SETTING: 'next_setting'>: HAFakeDatetime(2025, 1, 29, 17, 4, 24, 314520, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_TRANSIT: 'next_transit'>: HAFakeDatetime(2025, 1, 30, 13, 31, 5, 646230, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PHASE: 'phase'>: 'new_moon',
      <PlanetStateKey.PLANET_NAME: 'planet_name'>: 'moon',
      <PlanetStateKey.PREVIOUS_RISING: 'previous_rising'>: HAFakeDatetime(2025, 1, 29, 8, 21, 10, 207951, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PREVIOUS_SETTING: 'previous_setting'>: HAFakeDatetime(2025, 1, 28, 15, 41, 19, 288158, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.STATE: 'state'>: 'waning',
      'timezone': 'Europe/Berlin',
      <PlanetStateKey.TODAY_ABOVE_HORIZON_TIME: 'today_above_horizon_time'>: '8:43:14',
      <PlanetStateKey.TODAY_RISING: 'today_rising'>: HAFakeDatetime(2025, 1, 29, 8, 21, 10, 130602, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.TODAY_SETTING: 'today_setting'>: HAFakeDatetime(2025, 1, 29, 17, 4, 24, 306908, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_moon_main_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'above_horizon_descending',
  })
# ---
# name: test_sensor_time_transitions[test_time0-new_moon][sensor.planet_phase_moon_phase]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'planet_phase',
      'device_class': 'enum',
      'friendly_name': 'planet_phase_moon phase',
      'icon': 'mdi:moon-new',
      'options': list([
        'new_moon',
        'waxing_crescent',
        'first_quarter',
        'waxing_gibbous',
        'full_moon',
        'waning_gibbous',
        'last_quarter',
        'waning_crescent',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_moon_phase',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'new_moon',
  })
# ---
# name: test_sensor_time_transitions[test_time1-waxing_crescent][moon_main_state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <PlanetStateKey.ALTITUDE: 'altitude'>: 30.66328392022058,
      'attribution': 'planet_phase',
      <PlanetStateKey.AZIMUTH: 'azimuth'>: 126.59011135999103,
      <PlanetStateKey.DISTANCE: 'distance'>: 364229665.3365903,
      'elevation': 295,
      'friendly_name': 'planet_phase_moon main_state',
      <PlanetStateKey.HOUR_ANGLE: 'hour_angle'>: 316.2491259246528,
      'icon': 'mdi:weather-sunset-up',
      <PlanetStateKey.Iillumination: 'illumination'>: 19.699302673339844,
      'latitude': 48.69413582658938,
      'longitude': 9.418473690748216,
      <PlanetStateKey.MAIN_MOVE: 'main_move'>: 'ascending',
      <PlanetStateKey.MAIN_STATE: 'main_state'>: 'above_horizon',
      <PlanetStateKey.MEASUREMENT_LOCAL_TIME: 'measurement_local_time'>: HAFakeDatetime(2025, 2, 2, 13, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.MEASUREMENT_UTC_TIME: 'measurement_utc_time'>: HAFakeDatetime(2025, 2, 2, 12, 0, tzinfo=zoneinfo.ZoneInfo(key='UTC')),
      <PlanetStateKey.NEXT_ANTITRANSIT: 'next_antitransit'>: HAFakeDatetime(2025, 2, 3, 4, 23, 18, 656316, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.MOON_NEXT_FULLMOON: 'next_full_moon'>: HAFakeDatetime(2025, 2, 12, 14, 53, 19, 940016, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.MOON_NEXT_NEWMOON: 'next_new_moon'>: HAFakeDatetime(2025, 2, 28, 1, 44, 45, 652178, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_RISING: 'next_rising'>: HAFakeDatetime(2025, 2, 3, 9, 52, 44, 116380, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_SETTING: 'next_setting'>: HAFakeDatetime(2025, 2, 2, 22, 38, 51, 899065, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_TRANSIT: 'next_transit'>: HAFakeDatetime(2025, 2, 2, 15, 58, 59, 800916, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PHASE: 'phase'>: 'waxing_crescent',
      <PlanetStateKey.PLANET_NAME: 'planet_name'>: 'moon',
      <PlanetStateKey.PREVIOUS_RISING: 'previous_rising'>: HAFakeDatetime(2025, 2, 2, 9, 36, 45, 584108, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PREVIOUS_SETTING: 'previous_setting'>: HAFakeDatetime(2025, 2, 1, 21, 16, 17, 315706, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.STATE: 'state'>: 'waxing',
      'timezone': 'Europe/Berlin',
      <PlanetStateKey.TODAY_ABOVE_HORIZON_TIME: 'today_above_horizon_time'>: '13:02:06',
      <PlanetStateKey.TODAY_RISING: 'today_rising'>: HAFakeDatetime(2025, 2, 2, 9, 36, 45, 497578, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.TODAY_SETTING: 'today_setting'>: HAFakeDatetime(2025, 2, 2, 22, 38, 51, 893730, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_moon_main_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'above_horizon_ascending',
  })
# ---
# name: test_sensor_time_transitions[test_time1-waxing_crescent][sensor.planet_phase_moon_phase]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'planet_phase',
      'device_class': 'enum',
      'friendly_name': 'planet_phase_moon phase',
      'icon': 'mdi:moon-waxing-crescent',
      'options': list([
        'new_moon',
        'waxing_crescent',
        'first_quarter',
        'waxing_gibbous',
        'full_moon',
        'waning_gibbous',
        'last_quarter',
        'waning_crescent',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_moon_phase',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'waxing_crescent',
  })
# ---
# name: test_sensor_time_transitions[test_time2-first_quarter][moon_main_state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <PlanetStateKey.ALTITUDE: 'altitude'>: 66.53305712020179,
      'attribution': 'planet_phase',
      <PlanetStateKey.AZIMUTH: 'azimuth'>: 149.56741414304753,
      <PlanetStateKey.DISTANCE: 'distance'>: 369143757.6768827,
      'elevation': 295,
      'friendly_name': 'planet_phase_moon main_state',
      <PlanetStateKey.HOUR_ANGLE: 'hour_angle'>: 346.8476006903451,
      'icon': 'mdi:weather-sunset-up',
      <PlanetStateKey.Iillumination: 'illumination'>: 50.10801696777344,
      'latitude': 48.69413582658938,
      'longitude': 9.418473690748216,
      <PlanetStateKey.MAIN_MOVE: 'main_move'>: 'ascending',
      <PlanetStateKey.MAIN_STATE: 'main_state'>: 'above_horizon',
      <PlanetStateKey.MEASUREMENT_LOCAL_TIME: 'measurement_local_time'>: HAFakeDatetime(2025, 3, 6, 17, 30, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.MEASUREMENT_UTC_TIME: 'measurement_utc_time'>: HAFakeDatetime(2025, 3, 6, 16, 30, tzinfo=zoneinfo.ZoneInfo(key='UTC')),
      <PlanetStateKey.NEXT_ANTITRANSIT: 'next_antitransit'>: HAFakeDatetime(2025, 3, 7, 6, 54, 18, 923158, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.MOON_NEXT_FULLMOON: 'next_full_moon'>: HAFakeDatetime(2025, 3, 14, 7, 54, 35, 375846, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.MOON_NEXT_NEWMOON: 'next_new_moon'>: HAFakeDatetime(2025, 3, 29, 11, 57, 46, 537722, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_RISING: 'next_rising'>: HAFakeDatetime(2025, 3, 7, 10, 29, 51, 78128, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_SETTING: 'next_setting'>: HAFakeDatetime(2025, 3, 7, 3, 17, 3, 683213, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_TRANSIT: 'next_transit'>: HAFakeDatetime(2025, 3, 6, 18, 24, 7, 331791, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PHASE: 'phase'>: 'first_quarter',
      <PlanetStateKey.PLANET_NAME: 'planet_name'>: 'moon',
      <PlanetStateKey.PREVIOUS_RISING: 'previous_rising'>: HAFakeDatetime(2025, 3, 6, 9, 40, 22, 191176, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PREVIOUS_SETTING: 'previous_setting'>: HAFakeDatetime(2025, 3, 6, 2, 1, 52, 872584, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.STATE: 'state'>: 'waxing',
      'timezone': 'Europe/Berlin',
      <PlanetStateKey.TODAY_ABOVE_HORIZON_TIME: 'today_above_horizon_time'>: '17:36:41',
      <PlanetStateKey.TODAY_RISING: 'today_rising'>: HAFakeDatetime(2025, 3, 6, 9, 40, 22, 145672, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.TODAY_SETTING: 'today_setting'>: HAFakeDatetime(2025, 3, 7, 3, 17, 3, 676958, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_moon_main_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'above_horizon_ascending',
  })
# ---
# name: test_sensor_time_transitions[test_time2-first_quarter][sensor.planet_phase_moon_phase]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'planet_phase',
      'device_class': 'enum',
      'friendly_name': 'planet_phase_moon phase',
      'icon': 'mdi:moon-first-quarter',
      'options': list([
        'new_moon',
        'waxing_crescent',
        'first_quarter',
        'waxing_gibbous',
        'full_moon',
        'waning_gibbous',
        'last_quarter',
        'waning_crescent',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_moon_phase',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'first_quarter',
  })
# ---
# name: test_sensor_time_transitions[test_time3-waxing_gibbous][moon_main_state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <PlanetStateKey.ALTITUDE: 'altitude'>: -8.164347949837913,
      'attribution': 'planet_phase',
      <PlanetStateKey.AZIMUTH: 'azimuth'>: 43.24870659810196,
      <PlanetStateKey.DISTANCE: 'distance'>: 391200050.4200859,
      'elevation': 295,
      'friendly_name': 'planet_phase_moon main_state',
      <PlanetStateKey.HOUR_ANGLE: 'hour_angle'>: 226.86857885448833,
      'icon': 'mdi:weather-moonset-up',
      <PlanetStateKey.Iillumination: 'illumination'>: 86.41360473632812,
      'latitude': 48.69413582658938,
      'longitude': 9.418473690748216,
      <PlanetStateKey.MAIN_MOVE: 'main_move'>: 'ascending',
      <PlanetStateKey.MAIN_STATE: 'main_state'>: 'below_horizon',
      <PlanetStateKey.MEASUREMENT_LOCAL_TIME: 'measurement_local_time'>: HAFakeDatetime(2025, 3, 10, 13, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.MEASUREMENT_UTC_TIME: 'measurement_utc_time'>: HAFakeDatetime(2025, 3, 10, 12, 0, tzinfo=zoneinfo.ZoneInfo(key='UTC')),
      <PlanetStateKey.NEXT_ANTITRANSIT: 'next_antitransit'>: HAFakeDatetime(2025, 3, 11, 10, 32, 36, 97956, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.MOON_NEXT_FULLMOON: 'next_full_moon'>: HAFakeDatetime(2025, 3, 14, 7, 54, 35, 375822, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.MOON_NEXT_NEWMOON: 'next_new_moon'>: HAFakeDatetime(2025, 3, 29, 11, 57, 46, 537724, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_RISING: 'next_rising'>: HAFakeDatetime(2025, 3, 10, 14, 1, 48, 348812, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_SETTING: 'next_setting'>: HAFakeDatetime(2025, 3, 11, 5, 58, 0, 997500, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_TRANSIT: 'next_transit'>: HAFakeDatetime(2025, 3, 10, 22, 8, 46, 987156, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PHASE: 'phase'>: 'waxing_gibbous',
      <PlanetStateKey.PLANET_NAME: 'planet_name'>: 'moon',
      <PlanetStateKey.PREVIOUS_RISING: 'previous_rising'>: HAFakeDatetime(2025, 3, 9, 12, 45, 23, 694190, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PREVIOUS_SETTING: 'previous_setting'>: HAFakeDatetime(2025, 3, 10, 5, 34, 34, 996446, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.STATE: 'state'>: 'waxing',
      'timezone': 'Europe/Berlin',
      <PlanetStateKey.TODAY_ABOVE_HORIZON_TIME: 'today_above_horizon_time'>: '15:56:12',
      <PlanetStateKey.TODAY_RISING: 'today_rising'>: HAFakeDatetime(2025, 3, 10, 14, 1, 48, 354262, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.TODAY_SETTING: 'today_setting'>: HAFakeDatetime(2025, 3, 11, 5, 58, 0, 997776, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_moon_main_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'below_horizon_ascending',
  })
# ---
# name: test_sensor_time_transitions[test_time3-waxing_gibbous][sensor.planet_phase_moon_phase]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'planet_phase',
      'device_class': 'enum',
      'friendly_name': 'planet_phase_moon phase',
      'icon': 'mdi:moon-waxing-gibbous',
      'options': list([
        'new_moon',
        'waxing_crescent',
        'first_quarter',
        'waxing_gibbous',
        'full_moon',
        'waning_gibbous',
        'last_quarter',
        'waning_crescent',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_moon_phase',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'waxing_gibbous',
  })
# ---
# name: test_sensor_time_transitions[test_time4-full_moon][moon_main_state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <PlanetStateKey.ALTITUDE: 'altitude'>: -19.748501607662217,
      'attribution': 'planet_phase',
      <PlanetStateKey.AZIMUTH: 'azimuth'>: 102.75850900611684,
      <PlanetStateKey.DISTANCE: 'distance'>: 407378338.6045648,
      'elevation': 295,
      'friendly_name': 'planet_phase_moon main_state',
      <PlanetStateKey.HOUR_ANGLE: 'hour_angle'>: 265.8318620189347,
      'icon': 'mdi:weather-moonset-up',
      <PlanetStateKey.Iillumination: 'illumination'>: 99.86459350585938,
      'latitude': 48.69413582658938,
      'longitude': 9.418473690748216,
      <PlanetStateKey.MAIN_MOVE: 'main_move'>: 'ascending',
      <PlanetStateKey.MAIN_STATE: 'main_state'>: 'below_horizon',
      <PlanetStateKey.MEASUREMENT_LOCAL_TIME: 'measurement_local_time'>: HAFakeDatetime(2025, 5, 12, 19, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.MEASUREMENT_UTC_TIME: 'measurement_utc_time'>: HAFakeDatetime(2025, 5, 12, 17, 0, tzinfo=zoneinfo.ZoneInfo(key='UTC')),
      <PlanetStateKey.NEXT_ANTITRANSIT: 'next_antitransit'>: HAFakeDatetime(2025, 5, 13, 13, 50, 18, 849061, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.MOON_NEXT_FULLMOON: 'next_full_moon'>: HAFakeDatetime(2025, 6, 11, 9, 43, 45, 814192, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.MOON_NEXT_NEWMOON: 'next_new_moon'>: HAFakeDatetime(2025, 5, 27, 5, 2, 17, 25657, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_RISING: 'next_rising'>: HAFakeDatetime(2025, 5, 12, 21, 12, 33, 459535, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_SETTING: 'next_setting'>: HAFakeDatetime(2025, 5, 13, 5, 32, 24, 305350, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_TRANSIT: 'next_transit'>: HAFakeDatetime(2025, 5, 13, 1, 26, 16, 520402, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PHASE: 'phase'>: 'full_moon',
      <PlanetStateKey.PLANET_NAME: 'planet_name'>: 'moon',
      <PlanetStateKey.PREVIOUS_RISING: 'previous_rising'>: HAFakeDatetime(2025, 5, 11, 20, 2, 5, 34475, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PREVIOUS_SETTING: 'previous_setting'>: HAFakeDatetime(2025, 5, 12, 5, 9, 41, 14658, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.STATE: 'state'>: 'waning',
      'timezone': 'Europe/Berlin',
      <PlanetStateKey.TODAY_ABOVE_HORIZON_TIME: 'today_above_horizon_time'>: '8:19:50',
      <PlanetStateKey.TODAY_RISING: 'today_rising'>: HAFakeDatetime(2025, 5, 12, 21, 12, 33, 482612, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.TODAY_SETTING: 'today_setting'>: HAFakeDatetime(2025, 5, 13, 5, 32, 24, 325840, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_moon_main_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'below_horizon_ascending',
  })
# ---
# name: test_sensor_time_transitions[test_time4-full_moon][sensor.planet_phase_moon_phase]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'planet_phase',
      'device_class': 'enum',
      'friendly_name': 'planet_phase_moon phase',
      'icon': 'mdi:moon-full',
      'options': list([
        'new_moon',
        'waxing_crescent',
        'first_quarter',
        'waxing_gibbous',
        'full_moon',
        'waning_gibbous',
        'last_quarter',
        'waning_crescent',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_moon_phase',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'full_moon',
  })
# ---
# name: test_sensor_time_transitions[test_time5-waning_gibbous][moon_main_state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <PlanetStateKey.ALTITUDE: 'altitude'>: -36.98206609122321,
      'attribution': 'planet_phase',
      <PlanetStateKey.AZIMUTH: 'azimuth'>: 275.3145981971889,
      <PlanetStateKey.DISTANCE: 'distance'>: 392536131.53545886,
      'elevation': 295,
      'friendly_name': 'planet_phase_moon main_state',
      <PlanetStateKey.HOUR_ANGLE: 'hour_angle'>: 119.64449156346448,
      'icon': 'mdi:weather-moonset-down',
      <PlanetStateKey.Iillumination: 'illumination'>: 70.66226959228516,
      'latitude': 48.69413582658938,
      'longitude': 9.418473690748216,
      <PlanetStateKey.MAIN_MOVE: 'main_move'>: 'descending',
      <PlanetStateKey.MAIN_STATE: 'main_state'>: 'below_horizon',
      <PlanetStateKey.MEASUREMENT_LOCAL_TIME: 'measurement_local_time'>: HAFakeDatetime(2025, 5, 18, 14, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.MEASUREMENT_UTC_TIME: 'measurement_utc_time'>: HAFakeDatetime(2025, 5, 18, 12, 0, tzinfo=zoneinfo.ZoneInfo(key='UTC')),
      <PlanetStateKey.NEXT_ANTITRANSIT: 'next_antitransit'>: HAFakeDatetime(2025, 5, 18, 18, 12, 25, 137503, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.MOON_NEXT_FULLMOON: 'next_full_moon'>: HAFakeDatetime(2025, 6, 11, 9, 43, 45, 814170, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.MOON_NEXT_NEWMOON: 'next_new_moon'>: HAFakeDatetime(2025, 5, 27, 5, 2, 17, 25654, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_RISING: 'next_rising'>: HAFakeDatetime(2025, 5, 19, 2, 13, 56, 884350, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_SETTING: 'next_setting'>: HAFakeDatetime(2025, 5, 19, 11, 11, 12, 310134, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_TRANSIT: 'next_transit'>: HAFakeDatetime(2025, 5, 19, 6, 37, 36, 414394, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PHASE: 'phase'>: 'waning_gibbous',
      <PlanetStateKey.PLANET_NAME: 'planet_name'>: 'moon',
      <PlanetStateKey.PREVIOUS_RISING: 'previous_rising'>: HAFakeDatetime(2025, 5, 18, 1, 46, 59, 694344, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PREVIOUS_SETTING: 'previous_setting'>: HAFakeDatetime(2025, 5, 18, 9, 53, 51, 89270, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.STATE: 'state'>: 'waning',
      'timezone': 'Europe/Berlin',
      <PlanetStateKey.TODAY_ABOVE_HORIZON_TIME: 'today_above_horizon_time'>: '8:06:51',
      <PlanetStateKey.TODAY_RISING: 'today_rising'>: HAFakeDatetime(2025, 5, 18, 1, 46, 59, 620235, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.TODAY_SETTING: 'today_setting'>: HAFakeDatetime(2025, 5, 18, 9, 53, 51, 76634, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_moon_main_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'below_horizon_descending',
  })
# ---
# name: test_sensor_time_transitions[test_time5-waning_gibbous][sensor.planet_phase_moon_phase]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'planet_phase',
      'device_class': 'enum',
      'friendly_name': 'planet_phase_moon phase',
      'icon': 'mdi:moon-waning-gibbous',
      'options': list([
        'new_moon',
        'waxing_crescent',
        'first_quarter',
        'waxing_gibbous',
        'full_moon',
        'waning_gibbous',
        'last_quarter',
        'waning_crescent',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_moon_phase',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'waning_gibbous',
  })
# ---
# name: test_sensor_time_transitions[test_time6-last_quarter][moon_main_state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <PlanetStateKey.ALTITUDE: 'altitude'>: -14.510115344477619,
      'attribution': 'planet_phase',
      <PlanetStateKey.AZIMUTH: 'azimuth'>: 264.74236694697964,
      <PlanetStateKey.DISTANCE: 'distance'>: 380429374.56661135,
      'elevation': 295,
      'friendly_name': 'planet_phase_moon main_state',
      <PlanetStateKey.HOUR_ANGLE: 'hour_angle'>: 95.84829128162954,
      'icon': 'mdi:weather-moonset-down',
      <PlanetStateKey.Iillumination: 'illumination'>: 50.130828857421875,
      'latitude': 48.69413582658938,
      'longitude': 9.418473690748216,
      <PlanetStateKey.MAIN_MOVE: 'main_move'>: 'descending',
      <PlanetStateKey.MAIN_STATE: 'main_state'>: 'below_horizon',
      <PlanetStateKey.MEASUREMENT_LOCAL_TIME: 'measurement_local_time'>: HAFakeDatetime(2025, 5, 20, 14, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.MEASUREMENT_UTC_TIME: 'measurement_utc_time'>: HAFakeDatetime(2025, 5, 20, 12, 0, tzinfo=zoneinfo.ZoneInfo(key='UTC')),
      <PlanetStateKey.NEXT_ANTITRANSIT: 'next_antitransit'>: HAFakeDatetime(2025, 5, 20, 19, 50, 26, 372116, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.MOON_NEXT_FULLMOON: 'next_full_moon'>: HAFakeDatetime(2025, 6, 11, 9, 43, 45, 814184, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.MOON_NEXT_NEWMOON: 'next_new_moon'>: HAFakeDatetime(2025, 5, 27, 5, 2, 17, 25644, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_RISING: 'next_rising'>: HAFakeDatetime(2025, 5, 21, 2, 52, 40, 561356, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_SETTING: 'next_setting'>: HAFakeDatetime(2025, 5, 21, 13, 49, 32, 881020, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_TRANSIT: 'next_transit'>: HAFakeDatetime(2025, 5, 21, 8, 14, 6, 179823, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PHASE: 'phase'>: 'last_quarter',
      <PlanetStateKey.PLANET_NAME: 'planet_name'>: 'moon',
      <PlanetStateKey.PREVIOUS_RISING: 'previous_rising'>: HAFakeDatetime(2025, 5, 20, 2, 35, 5, 475742, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PREVIOUS_SETTING: 'previous_setting'>: HAFakeDatetime(2025, 5, 20, 12, 30, 4, 441272, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.STATE: 'state'>: 'waning',
      'timezone': 'Europe/Berlin',
      <PlanetStateKey.TODAY_ABOVE_HORIZON_TIME: 'today_above_horizon_time'>: '9:54:58',
      <PlanetStateKey.TODAY_RISING: 'today_rising'>: HAFakeDatetime(2025, 5, 20, 2, 35, 5, 414793, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.TODAY_SETTING: 'today_setting'>: HAFakeDatetime(2025, 5, 20, 12, 30, 4, 387776, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_moon_main_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'below_horizon_descending',
  })
# ---
# name: test_sensor_time_transitions[test_time6-last_quarter][sensor.planet_phase_moon_phase]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'planet_phase',
      'device_class': 'enum',
      'friendly_name': 'planet_phase_moon phase',
      'icon': 'mdi:moon-last-quarter',
      'options': list([
        'new_moon',
        'waxing_crescent',
        'first_quarter',
        'waxing_gibbous',
        'full_moon',
        'waning_gibbous',
        'last_quarter',
        'waning_crescent',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_moon_phase',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'last_quarter',
  })
# ---
# name: test_sensor_time_transitions[test_time7-waning_crescent][moon_main_state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <PlanetStateKey.ALTITUDE: 'altitude'>: 22.783243448358093,
      'attribution': 'planet_phase',
      <PlanetStateKey.AZIMUTH: 'azimuth'>: 250.97661244843917,
      <PlanetStateKey.DISTANCE: 'distance'>: 361884565.89875746,
      'elevation': 295,
      'friendly_name': 'planet_phase_moon main_state',
      <PlanetStateKey.HOUR_ANGLE: 'hour_angle'>: 61.11358644807807,
      'icon': 'mdi:weather-sunset-down',
      <PlanetStateKey.Iillumination: 'illumination'>: 18.522418975830078,
      'latitude': 48.69413582658938,
      'longitude': 9.418473690748216,
      <PlanetStateKey.MAIN_MOVE: 'main_move'>: 'descending',
      <PlanetStateKey.MAIN_STATE: 'main_state'>: 'above_horizon',
      <PlanetStateKey.MEASUREMENT_LOCAL_TIME: 'measurement_local_time'>: HAFakeDatetime(2025, 5, 23, 14, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.MEASUREMENT_UTC_TIME: 'measurement_utc_time'>: HAFakeDatetime(2025, 5, 23, 12, 0, tzinfo=zoneinfo.ZoneInfo(key='UTC')),
      <PlanetStateKey.NEXT_ANTITRANSIT: 'next_antitransit'>: HAFakeDatetime(2025, 5, 23, 22, 14, 31, 811438, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.MOON_NEXT_FULLMOON: 'next_full_moon'>: HAFakeDatetime(2025, 6, 11, 9, 43, 45, 814192, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.MOON_NEXT_NEWMOON: 'next_new_moon'>: HAFakeDatetime(2025, 5, 27, 5, 2, 17, 25648, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_RISING: 'next_rising'>: HAFakeDatetime(2025, 5, 24, 3, 40, 45, 349250, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_SETTING: 'next_setting'>: HAFakeDatetime(2025, 5, 23, 16, 33, 11, 548256, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.NEXT_TRANSIT: 'next_transit'>: HAFakeDatetime(2025, 5, 24, 10, 40, 18, 452405, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PHASE: 'phase'>: 'waning_crescent',
      <PlanetStateKey.PLANET_NAME: 'planet_name'>: 'moon',
      <PlanetStateKey.PREVIOUS_RISING: 'previous_rising'>: HAFakeDatetime(2025, 5, 23, 3, 23, 59, 634816, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.PREVIOUS_SETTING: 'previous_setting'>: HAFakeDatetime(2025, 5, 22, 15, 10, 9, 572214, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.STATE: 'state'>: 'waning',
      'timezone': 'Europe/Berlin',
      <PlanetStateKey.TODAY_ABOVE_HORIZON_TIME: 'today_above_horizon_time'>: '13:09:12',
      <PlanetStateKey.TODAY_RISING: 'today_rising'>: HAFakeDatetime(2025, 5, 23, 3, 23, 59, 597296, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
      <PlanetStateKey.TODAY_SETTING: 'today_setting'>: HAFakeDatetime(2025, 5, 23, 16, 33, 11, 609308, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_moon_main_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'above_horizon_descending',
  })
# ---
# name: test_sensor_time_transitions[test_time7-waning_crescent][sensor.planet_phase_moon_phase]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'planet_phase',
      'device_class': 'enum',
      'friendly_name': 'planet_phase_moon phase',
      'icon': 'mdi:moon-waning-crescent',
      'options': list([
        'new_moon',
        'waxing_crescent',
        'first_quarter',
        'waxing_gibbous',
        'full_moon',
        'waning_gibbous',
        'last_quarter',
        'waning_crescent',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.planet_phase_moon_phase',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'waning_crescent',
  })
# ---
